# real_time_video

./: .gitignore  CMakeLists.txt  README.MD  config.conf
common/: abstractgstapp.cpp  abstractgstapp.h  spendings_xml.cpp  utils.h
common/estimator/: ack_bitrate_estimator.c  aimd_rate_control.c  aimd_rate_control.h  bitrate_controller.c  bitrate_controller.h  cc_feedback_adapter.c  cc_loss_stat.c  cc_loss_stat.h  delay_base_bwe.h  estimator_common.c  inter_arrival.c  inter_arrival.h  kalman_filter.h  overuse_detector.c  rate_stat.h
estimator/: CMakeLists.txt
estimator/cmake/: estimatorConfig-noconfig.cmake  estimatorConfig.cmake
estimator/header/: utils.h
estimator/source/: aimd_rate_control.c  kalman_filter.c  remote_bitrate_estimator.c  utils.c
estimator_source/: CMakeLists.txt
estimator_source/header/: estimator_common.h  kalman_filter.h  rate_stat.h  remote_bitrate_estimator.h
estimator_source/source/: inter_arrival.c  rate_stat.c  remote_bitrate_estimator.c
gstgccanalysis/: CMakeLists.txt  gstgccanalysis.c  gstgccanalysis.cpp  gstgccanalysis.h
gstgccanalysis/estimator/: CMakeLists.txt
gstgccanalysis/estimator/header/: aimd_rate_control.h  remote_bitrate_estimator.h  utils.h
gstgccanalysis/estimator/source/: aimd_rate_control.c  estimator_common.c  overuse_detector.c  remote_bitrate_estimator.c  utils.c
simple_channel/: init.sh  play.sh
simple_rtp_client/: CMakeLists.txt  client_class.cpp  client_class.h  main.cpp
simple_rtp_client/gstgccanalysis/: CMakeLists.txt  gstgccanalysis.cpp  gstgccanalysis.h  old_cmake.txt
simple_rtp_server/: CMakeLists.txt  config.json  main.cpp  server_class.cpp  server_class.h
